syntax = "proto3";

package raft;
option go_package="github.com/wbyatt/rolodex/raft";

service RolodexRaft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);
}

message DiscoverRequest {
    repeated string members = 1;
}

message DiscoverResponse {
    repeated string members = 1;
    string caller = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  string leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int32 leader_commit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

message LogEntry {
  int32 term = 1;
  int32 index = 2;
  string command = 3;
  string key = 4;
  string value = 5;
}